# gianna

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  USAGE.md  main.py  pyproject.toml  pytest.ini  readme.md  setup.py  tasks.py  test_vad.py  test_workflows_basic.py
assistants/: __init__.py
assistants/audio/loaders/: mp3.py  readme.md
assistants/audio/players/: aac.py  factories.py  factory_method.py  flac.py  m4a.py  mp3.py  ogg.py  wave.py
assistants/audio/recorders/: abstract_recorders.py  basics.py  factories.py  factory_method.py  m4a.py  mp3.py  ogg.py  readme.md  wave.py
assistants/audio/stt/: factory_method.py  m4a.py  readme.md  whisper_local.py
assistants/audio/tts/: abstracts.py  elevenlabs.py  factories.py  factory_method.py  google_api.py  whisper.py
assistants/commands/: factory_method.py  readme.md  register.py  shell.py  speech.py
assistants/models/: __init__.py  abstracts.py  basics.py  factory_method.py  google.py  groq.py  nvidia.py  ollama.py  openai.py  readme.md  registers.py
config/production/: app.yaml  environment.yaml
config/vad/: development.yaml  testing.yaml
docs/: README.md
docs/api/: README.md
docs/deployment/: README.md
docs/developer-guide/: README.md
docs/phases/: README.md
docs/phases/fase1/: README.md
docs/production/: README.md
docs/user-guide/: README.md
examples/: backward_compatibility_test.py  core_state_demo.py  langgraph_migration_demo.py  learning_system_demo.py  multi_agent_coordination_example.py  optimization_config.yaml  optimization_examples.py  semantic_memory_example.py  simple_learning_example.py  streaming_voice_demo.py  tools_integration_demo.py  vad_calibration_demo.py  vad_factory_demo.py  vad_integration_demo.py  voice_workflows_demo.py
examples/advanced/: README.md  multi_agent_orchestration.py  real_time_voice_assistant.py  semantic_memory_system.py
gianna/: __init__.py
gianna/agents/: __init__.py  base_agent.py  react_agents.py
gianna/assistants/: __init__.py
gianna/assistants/audio/: __init__.py  pydub_utils.py  vad.py
gianna/assistants/audio/players/: __init__.py  aac.py  abstract_players.py  factories.py  factory_method.py  flac.py  m4a.py  mp3.py  ogg.py  wave.py
gianna/assistants/audio/recorders/: __init__.py  abstract_recorders.py  basics.py  factories.py  factory_method.py  m4a.py  (+4 more)
gianna/assistants/commands/: __init__.py  abstracts.py  bases.py  factory_method.py  readme.md  register.py  shell.py  speech.py
gianna/assistants/models/: __init__.py  abstracts.py  anthropic.py  basics.py  cohere.py  factory_method.py  google.py  groq.py  nvidia.py  ollama.py  openai.py  registers.py  xai.py
gianna/audio/: README.md  __init__.py  streaming.py
gianna/audio/vad/: CALIBRATION_METRICS_README.md  README.md  __init__.py  adaptive_vad.py  base.py  benchmark.py  calibration.py  energy_vad.py  metrics.py  realtime_monitor.py  silero_vad.py  spectral_vad.py  types.py  vad_README.md  webrtc_vad.py
gianna/config/: __init__.py  vad_config.py  validator.py
gianna/coordination/: README.md  __init__.py  orchestrator.py  router.py
gianna/core/: README.md  __init__.py  langgraph_chain.py  langgraph_factory.py  migration_utils.py  state.py  state_manager.py
gianna/learning/: README.md  __init__.py  adaptation_engine.py  pattern_analysis.py  state_integration.py  user_adaptation.py
gianna/memory/: README.md  __init__.py  embeddings.py  semantic_memory.py  state_integration.py  vectorstore.py
gianna/monitoring/: __init__.py  health.py  logger.py  metrics.py
gianna/optimization/: README.md  __init__.py  caching.py  monitoring.py  performance.py  resource_management.py
gianna/production/: __init__.py  cache_manager.py
gianna/security/: __init__.py  rate_limiter.py  secrets_manager.py  validator.py
gianna/tools/: __init__.py  audio_tools.py  filesystem_tools.py  memory_tools.py  shell_tools.py
gianna/workflows/: README.md  __init__.py  examples.py  templates.py  voice_interaction.py  voice_streaming.py
monitoring/grafana/dashboards/: dashboard.yml
monitoring/loki/: loki-config.yml
monitoring/prometheus/rules/: gianna-alerts.yml
notebooks/: 01_basics.ipynb  02_audio.ipynb  03_commands.ipynb  semantic_memory_demo.ipynb  tutorial_fase1_langgraph.ipynb
scripts/: backup.sh  validate_phase.py
tests/: README.md  __init__.py  conftest.py  run_coverage.py  run_fase2_validation.py  run_tests.py  test_coordination.py  test_end_to_end.py  test_learning_system.py  test_optimization_performance.py  test_performance.py  test_react_agents.py  test_tools_integration.py  test_workflows.py
tests/configs/: __init__.py  pytest.ini
tests/fixtures/: __init__.py  mock_data.py
tests/integration/: __init__.py  test_voice_workflows.py
tests/performance/: __init__.py  test_load_testing.py
tests/unit/: __init__.py  test_audio.py  test_core.py  test_models.py
(+22 files in other folders)
