[tool.poetry]
name = "gianna"
version = "0.1.0"
description = ""
authors = ["Marcus Braga <mvbraga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
crewai = "^0.28.8"
crewai-tools = "^0.1.7"
langchain-google-genai = "^1.0.2"
langchain-nvidia-ai-endpoints = "^0.0.6"
langchain-groq = "^0.1.2"
pydub = "^0.25.1"
pyaudio = "^0.2.14"
gtts = "^2.5.1"
openai = "^1.20.0"
elevenlabs = "^1.0.5"
pyperclip = "^1.8.2"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
