[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gianna"
version = "0.1.4"
description = "Generative Intelligent Artificial Neural Network Assistant"
readme = "readme.md"
authors = [
    {name = "Marcus Braga", email = "mvbraga@gmail.com"}
]
license = {text = "Apache License 2.0"}
requires-python = ">=3.11,<=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["voice-assistant", "AI", "CrewAI", "Langchain", "OpenAI", "Google", "NVIDIA", "Groq", "Ollama"]
dependencies = [
    "crewai>=0.28.8",
    "langchain>=0.3.20",
    "langchain-google-genai>=2.1.2",
    "langchain-anthropic>=0.3.9",
    "langchain-community>=0.3.19",
    "langchain-core>=0.3.44",
    "langchain-groq>=0.2.5",
    "langchain-openai>=0.3.8",
    "langchain-text-splitters>=0.3.6",
    "langchain-xai>=0.2.1",
    "langchain-nvidia-ai-endpoints>=0.0.6",
    "langgraph>=0.3.9",
    "loguru>=0.7.3",
    "lxml>=5.3.1",
    "markdown>=3.7",
    "nbformat>=5.10.4",
    "python-dotenv>=1.0.1",
    "python-magic>=0.4.27",
    "pyyaml>=6.0.2",
    "tavily-python>=0.5.1",
    "tqdm>=4.67.1",
    "typing-extensions>=4.12.2",
    "pydantic>=2.11.3",
    "pydub>=0.25.1",
    "pyaudio>=0.2.14",
    "gtts>=2.5.1",
    "openai>=1.20.0",
    "elevenlabs>=1.0.5",
    "pyperclip>=1.8.2",
]
